# mathtkang-project-management-analysis

./: README.md  pyproject.toml
auths/: models.py  serializers.py  urls.py  views.py
auths/migrations/: 0001_initial.py
config/: root_urls.py  settings.py
kanbans/: models.py  serializers.py  urls.py  views.py
kanbans/migrations/: 0001_initial.py
teams/: models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py
